Interaction with QuickswapV3

--- a/src/core/package.json
+++ b/src/core/package.json
@@ -32,5 +32,9 @@
   "engines": {
     "npm": ">=8.0.0",
     "node": ">=14.0.0"
+  },
+  "dependencies": {
+    "@cryptoalgebra/core": "^2.0.0",
+    "@cryptoalgebra/periphery": "^1.0.0"
   }
 }
